Use the right http statusses when redirecting, add a message when something goes wrong when trying to login

--- a/app/views/layouts/main.hbs
+++ b/app/views/layouts/main.hbs
@@ -18,6 +18,15 @@
         <h1>{{title}}</h1>
       </div>
       {{> breadcrumbs}}
+      {{#if messages.error}}
+        <div class="alert alert-danger" role="alert">
+          <ul>
+            {{#each messages.error}}
+              <li>{{this}}</li>
+            {{/each}}
+          </ul>
+        </div>
+      {{/if}}
       {{{body}}}
     </div>
     <script src="/components/jquery/dist/jquery.min.js"></script>
